Added config files for the other built in editors

--- a/node_pie/node_def_files/node_def_example.jsonc
+++ b/node_pie/node_def_files/node_def_example.jsonc
@@ -1,4 +1,4 @@
-// This example shows how to structure a node pie definition file
+// This example shows how to structure a node pie definition file (This one is for the Serpens addon)
 // For the best experience it is recommended to edit this using a code editor
 // with syntax highlighting such as vscode or notepad++.
 {
