Changed config file versioning system

--- a/node_pie/node_def_files/CompositorNodeTree.jsonc
+++ b/node_pie/node_def_files/CompositorNodeTree.jsonc
@@ -1,6 +1,9 @@
 {
   "layout": {
-    "left": [["CONVERTOR"], ["DISTORT", "VECTOR"]],
+    "left": [
+      ["CONVERTOR", "LAYOUT"],
+      ["DISTORT", "VECTOR"]
+    ],
     "right": [["INPUT", "OUTPUT"], ["FILTER"]],
     "top": [["COLOR"]],
     "bottom": [["MATTE"]]
