--- a/node_pie/node_def_files/GeometryNodeTree_40.jsonc
+++ b/node_pie/node_def_files/GeometryNodeTree_40.jsonc
@@ -1,3 +1,4 @@
+// This is a versioning file that only specifies the new nodes in 4.0, compared to the base file.
 {
   "additions": {
     "layout": {
