Added subcategory labels

--- a/node_pie/node_def_files/GeometryNodeTree_40.jsonc
+++ b/node_pie/node_def_files/GeometryNodeTree_40.jsonc
@@ -42,7 +42,7 @@
       },
       "VOLUME": {
         "nodes": [
-          { "label": "sep" },
+          {"separator": true},
           {
             "label": "Signed Distance",
             "identifier": "GeometryNodeInputSignedDistance"
