--- a/node_pie/node_def_files/node_def_base.jsonc
+++ b/node_pie/node_def_files/node_def_base.jsonc
@@ -18,7 +18,7 @@
           "label": "Node label",
           "identifier": "NodeIdentifier"
         },
-        {"label": "sep"}
+        {"separator": true}
       ]
     }
   }
