--- a/node_pie/node_def_files/node_def_example.jsonc
+++ b/node_pie/node_def_files/node_def_example.jsonc
@@ -52,7 +52,7 @@
           "identifier": "SN_TriggerNode"
         },
         // Define a separator like this
-        { "label": "sep" },
+        {"separator": true},
         {
           "label": "Timestamp",
           "identifier": "SN_TimestampNode"
