--- a/node_pie/node_def_files/GeometryNodeTree.jsonc
+++ b/node_pie/node_def_files/GeometryNodeTree.jsonc
@@ -7,14 +7,8 @@
     ],
     "right": [
       ["CURVE", "POINT"],
-      ["MESH", "MATERIAL"],
-      [
-        "PRIMITIVES_MESH",
-        "PRIMITIVES_CURVE",
-        "MESH_TOPOLOGY",
-        "CURVE_TOPOLOGY",
-        "TEXT"
-      ]
+      ["MESH"],
+      ["PRIMITIVES_MESH", "PRIMITIVES_CURVE", "MATERIAL", "TEXT"]
     ],
     "top": [["GEOMETRY"]],
     "bottom": [["INSTANCE", "VOLUME"]]
@@ -88,6 +82,7 @@
       "label": "Curve",
       "color": "geometry",
       "nodes": [
+        { "separator": true, "label": "Operations" },
         {
           "label": "Curve Length",
           "identifier": "GeometryNodeCurveLength"
@@ -136,7 +131,7 @@
           "label": "Interpolate Curves",
           "identifier": "GeometryNodeInterpolateCurves"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Read" },
         {
           "label": "Curve Handle Positions",
           "identifier": "GeometryNodeInputCurveHandlePositions",
@@ -182,7 +177,23 @@
           "identifier": "GeometryNodeInputSplineResolution",
           "color": "input"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Topology" },
+        {
+          "label": "Points of Curve",
+          "identifier": "GeometryNodePointsOfCurve",
+          "color": "input"
+        },
+        {
+          "label": "Curve of Point",
+          "identifier": "GeometryNodeCurveOfPoint",
+          "color": "input"
+        },
+        {
+          "label": "Offset Point in Curve",
+          "identifier": "GeometryNodeOffsetPointInCurve",
+          "color": "input"
+        },
+        { "separator": true, "label": "Write" },
         {
           "label": "Set Curve Radius",
           "identifier": "GeometryNodeSetCurveRadius"
@@ -217,24 +228,24 @@
         }
       ]
     },
-    "CURVE_TOPOLOGY": {
-      "label": "Curve Topology",
-      "color": "input",
-      "nodes": [
-        {
-          "label": "Points of Curve",
-          "identifier": "GeometryNodePointsOfCurve"
-        },
-        {
-          "label": "Curve of Point",
-          "identifier": "GeometryNodeCurveOfPoint"
-        },
-        {
-          "label": "Offset Point in Curve",
-          "identifier": "GeometryNodeOffsetPointInCurve"
-        }
-      ]
-    },
+    // "CURVE_TOPOLOGY": {
+    //   "label": "Curve Topology",
+    //   "color": "input",
+    //   "nodes": [
+    //     {
+    //       "label": "Points of Curve",
+    //       "identifier": "GeometryNodePointsOfCurve"
+    //     },
+    //     {
+    //       "label": "Curve of Point",
+    //       "identifier": "GeometryNodeCurveOfPoint"
+    //     },
+    //     {
+    //       "label": "Offset Point in Curve",
+    //       "identifier": "GeometryNodeOffsetPointInCurve"
+    //     }
+    //   ]
+    // },
     "PRIMITIVES_CURVE": {
       "label": "Curve Primitives",
       "color": "geometry",
@@ -277,6 +288,7 @@
       "label": "Geometry",
       "color": "geometry",
       "nodes": [
+        { "separator": true, "label": "Operations" },
         {
           "label": "Bounding Box",
           "identifier": "GeometryNodeBoundBox"
@@ -317,7 +329,7 @@
           "label": "Transform",
           "identifier": "GeometryNodeTransform"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Sample" },
         {
           "label": "Geometry Proximity",
           "identifier": "GeometryNodeProximity"
@@ -334,7 +346,7 @@
           "label": "Sample Index",
           "identifier": "GeometryNodeSampleIndex"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Write" },
         {
           "label": "Set ID",
           "identifier": "GeometryNodeSetID"
@@ -349,6 +361,7 @@
       "label": "Input",
       "color": "input",
       "nodes": [
+        { "separator": true, "label": "Constant" },
         {
           "label": "Boolean",
           "identifier": "FunctionNodeInputBool"
@@ -381,7 +394,7 @@
           "label": "Vector",
           "identifier": "FunctionNodeInputVector"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Data" },
         {
           "label": "ID",
           "identifier": "GeometryNodeInputID"
@@ -414,7 +427,7 @@
           "label": "Is Viewport",
           "identifier": "GeometryNodeIsViewport"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Scene" },
         {
           "label": "Self Object",
           "identifier": "GeometryNodeSelfObject"
@@ -461,7 +474,7 @@
           "label": "Translate Instances",
           "identifier": "GeometryNodeTranslateInstances"
         },
-        { "label": "sep" },
+        { "separator": true },
         {
           "label": "Instance Rotation",
           "identifier": "GeometryNodeInputInstanceRotation",
@@ -501,44 +514,45 @@
         }
       ]
     },
-    "MESH_TOPOLOGY": {
-      "label": "Mesh Topology",
-      "color": "input",
-      "nodes": [
-        {
-          "label": "Corners of Face",
-          "identifier": "GeometryNodeCornersOfFace"
-        },
-        {
-          "label": "Vertex of Corner",
-          "identifier": "GeometryNodeVertexOfCorner"
-        },
-        {
-          "label": "Offset Corner in Face",
-          "identifier": "GeometryNodeOffsetCornerInFace"
-        },
-        {
-          "label": "Face of Corner",
-          "identifier": "GeometryNodeFaceOfCorner"
-        },
-        {
-          "label": "Edges of Vertex",
-          "identifier": "GeometryNodeEdgesOfVertex"
-        },
-        {
-          "label": "Edges of Corner",
-          "identifier": "GeometryNodeEdgesOfCorner"
-        },
-        {
-          "label": "Corners of Vertex",
-          "identifier": "GeometryNodeCornersOfVertex"
-        }
-      ]
-    },
+    // "MESH_TOPOLOGY": {
+    //   "label": "Mesh Topology",
+    //   "color": "input",
+    //   "nodes": [
+    //     {
+    //       "label": "Corners of Face",
+    //       "identifier": "GeometryNodeCornersOfFace"
+    //     },
+    //     {
+    //       "label": "Vertex of Corner",
+    //       "identifier": "GeometryNodeVertexOfCorner"
+    //     },
+    //     {
+    //       "label": "Offset Corner in Face",
+    //       "identifier": "GeometryNodeOffsetCornerInFace"
+    //     },
+    //     {
+    //       "label": "Face of Corner",
+    //       "identifier": "GeometryNodeFaceOfCorner"
+    //     },
+    //     {
+    //       "label": "Edges of Vertex",
+    //       "identifier": "GeometryNodeEdgesOfVertex"
+    //     },
+    //     {
+    //       "label": "Edges of Corner",
+    //       "identifier": "GeometryNodeEdgesOfCorner"
+    //     },
+    //     {
+    //       "label": "Corners of Vertex",
+    //       "identifier": "GeometryNodeCornersOfVertex"
+    //     }
+    //   ]
+    // },
     "MESH": {
       "label": "Mesh",
       "color": "geometry",
       "nodes": [
+        { "separator": true, "label": "Operations" },
         {
           "label": "Dual Mesh",
           "identifier": "GeometryNodeDualMesh"
@@ -603,7 +617,8 @@
           "label": "Sample Nearest Surface",
           "identifier": "GeometryNodeSampleNearestSurface"
         },
-        { "label": "sep" },
+
+        { "separator": true, "label": "Read" },
         {
           "label": "Edge Angle",
           "identifier": "GeometryNodeInputMeshEdgeAngle",
@@ -664,7 +679,43 @@
           "identifier": "GeometryNodeInputMeshVertexNeighbors",
           "color": "input"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Topology" },
+        {
+          "label": "Corners of Face",
+          "identifier": "GeometryNodeCornersOfFace",
+          "color": "input"
+        },
+        {
+          "label": "Vertex of Corner",
+          "identifier": "GeometryNodeVertexOfCorner",
+          "color": "input"
+        },
+        {
+          "label": "Offset Corner in Face",
+          "identifier": "GeometryNodeOffsetCornerInFace",
+          "color": "input"
+        },
+        {
+          "label": "Face of Corner",
+          "identifier": "GeometryNodeFaceOfCorner",
+          "color": "input"
+        },
+        {
+          "label": "Edges of Vertex",
+          "identifier": "GeometryNodeEdgesOfVertex",
+          "color": "input"
+        },
+        {
+          "label": "Edges of Corner",
+          "identifier": "GeometryNodeEdgesOfCorner",
+          "color": "input"
+        },
+        {
+          "label": "Corners of Vertex",
+          "identifier": "GeometryNodeCornersOfVertex",
+          "color": "input"
+        },
+        { "separator": true, "label": "Write" },
         {
           "label": "Set Shade Smooth",
           "identifier": "GeometryNodeSetShadeSmooth"
@@ -748,7 +799,7 @@
           "identifier": "GeometryNodeStringToCurves",
           "color": "geometry"
         },
-        { "label": "sep" },
+        { "separator": true },
         {
           "label": "Join Strings",
           "identifier": "GeometryNodeStringJoin",
@@ -826,6 +877,7 @@
       "label": "Utilities",
       "color": "converter",
       "nodes": [
+        { "separator": true, "label": "Field" },
         {
           "label": "Accumulate Field",
           "identifier": "GeometryNodeAccumulateField"
@@ -838,7 +890,7 @@
           "label": "Evaluate on Domain",
           "identifier": "GeometryNodeFieldOnDomain"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Math" },
         {
           "label": "Boolean Math",
           "identifier": "FunctionNodeBooleanMath"
@@ -879,7 +931,7 @@
           "label": "Switch",
           "identifier": "GeometryNodeSwitch"
         },
-        { "label": "sep" },
+        { "separator": true, "label": "Rotation" },
         {
           "label": "Align Euler to Vector",
           "identifier": "FunctionNodeAlignEulerToVector"
